fixed slideshow menu spacing and made play button instantly go to next slide

--- a/styles/components/Slideshow.module.scss
+++ b/styles/components/Slideshow.module.scss
@@ -16,21 +16,21 @@
     .slideshow_image_container {
       position: relative;
       width: 100%;
-      height: calc(100% - 100px);
+      height: calc(100% - 80px);
       background-color: $dark;
     }
       .slideshow_image {
         position: relative;
         width: 100%;
-        height: calc(100% - 100px);
+        height: calc(100% - 80px);
       }
 
     .slideshow_menu_container {
       display: flex;
       flex-direction: row;
       width: 100%;
-      min-height: 100px; 
-      max-height: 100px;
+      min-height: 80px; 
+      max-height: 80px;
       padding: 15px 20px; 
       color: $light;
       background-color: $primary;
@@ -49,26 +49,24 @@
       }
 
         .slideshow_menu_title {
-
+          line-height: 1;
           padding: 0px 10px;
         }
-        .icon_container {
-          padding-right: 10px;
+
+        .slideshow_icon {
+          font-size: 50px !important;
+          background-color: $dark;
+          padding: 10px;
+          margin-right: 10px;
+          border-radius: 5px;
+        }
+        .slideshow_icon:hover {
+          background-color: $light;
+          fill: $dark;
         }
 
-          .slideshow_icon {
-            font-size: 3rem !important;
-            background-color: $dark;
-            padding: 10px;
-            border-radius: 5px;
-          }
-          .slideshow_icon:hover {
-            background-color: $light;
-            fill: $dark;
-          }
-
-          .img_hor_vert {
-            -webkit-transform: scale(-1);
-            -ms-transform: scale(-1);
-                transform: scale(-1);
-        }
+.img_hor_vert {
+  -webkit-transform: scale(-1);
+  -ms-transform: scale(-1);
+      transform: scale(-1);
+}
